1.16.3, Fix rcon-cli binary